# REACT

./: .gitignore  README.md  setup.cfg
scripts/FetchReach/: run_eval.sh  run_random.sh  run_react.sh
scripts/FlatGrid11/: run_eval.sh  run_random.sh  run_react.sh
scripts/HoleyGrid11/: run_eval.sh  run_random.sh  run_react.sh
src/: cli.py  config.py  constants.py
src/baselines/: logger.py  random_search.py
src/custom_env/: custom_env.py
src/evo/: crossover.py  evo.py  evo_logger.py  individual.py  metrics.py  mutation.py  one_way_distance.py  run.py  selection.py  utils.py
src/evo/eval/: evaluation.py  fidelity.py  plot_evo.py
src/train/: models.py  plot_training.py  run.py  train_model.py
