##########################
# Setup.py Configuration #
##########################
[metadata]
name = react
version = 1.0.0
description = Revealing Evolutionary Action Consequence Trajectories for Interpretable Reinforcement Learning
long_description = file: README.md
long_description_content_type = text/markdown

# License Information
license = MIT
license_files = LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.10

[options]
install_requires =
    # environment
    hyphi-gym
    gymnasium-robotics
    stable-baselines3
    # general
    class_resolver
    click
    plotly
    kaleido
    # plotting
    tensorboard
    tensorboardX
    scipy

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.8

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    react = cli:main
